--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:typescript": "node node_modules/@v4fire/typescript-check",
     "test:eslint": "eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js ./src/**/*.ts",
     "test:components": "gulp test:components --test-processes 2",
-    "test:components:chrome": "npm run test:components --browsers chrome --retries 2",
+    "test:components:chrome": "npm run test:components -- --browsers chrome --retries 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
     "up": "npm i && npm up && npm audit fix"
   },
