--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,6 +75,9 @@ jobs:
       - name: Build tsconfig
         run: npx gulp build:tsconfig
 
+      - name: Build project
+        run: npx webpack
+
       - name: Run modules test
         run: npm run test:jasmine
 
