--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "urlconcat": "0.0.12",
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
-    "webpack": "5.49.0",
+    "webpack": "^5.49.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
     "worker-loader": "^3.0.7"
