--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,8 +41,66 @@ jobs:
       - name: Run components' tests
         run: npm run test:components:chrome
 
+  components-fat-html:
+    runs-on: windows-latest
+    timeout-minutes: 60
+
+    strategy:
+      matrix:
+        node-version: [ 14.1 ]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build tsconfig
+        run: npx gulp build:tsconfig
+
       - name: Run components' tests with --fat-html
         run: npm run test:components:chrome -- --fat-html
+
+  components-fat-html-es5:
+    runs-on: windows-latest
+    timeout-minutes: 60
+
+    strategy:
+      matrix:
+        node-version: [ 14.1 ]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build tsconfig
+        run: npx gulp build:tsconfig
 
       - name: Run components' tests with --fat-html --es ES5
         run: npm run test:components:chrome -- --fat-html --es ES5
