--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,8 +70,8 @@ jobs:
       - name: Build tsconfig
         run: npx gulp build:tsconfig
 
-      - name: Run components' tests with --fat-html
-        run: npm run test:components:chrome -- --fat-html
+      - name: Run components' tests with --fat-html --mode production
+        run: npm run test:components:chrome -- --fat-html --mode production
 
   components-fat-html-es5:
     runs-on: windows-latest
