--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@v4fire/core": "^3.59.0",
+    "@vue/compiler-sfc": "^3.2.19",
     "escaper": "^3.0.6",
     "eventemitter2": "^6.4.4",
     "jsdom": "^16.7.0",
@@ -45,7 +46,7 @@
     "snakeskin": "^7.5.1",
     "svg-transform-loader": "^2.0.13",
     "tslib": "2.3.1",
-    "vue": "2.6.10"
+    "vue": "^3.2.19"
   },
   "optionalDependencies": {
     "@pzlr/build-core": "^2.11.10",
@@ -101,7 +102,7 @@
     "postcss-loader": "^6.1.1",
     "raw-loader": "^4.0.2",
     "snakeskin-loader": "^8.0.1",
-    "ss2vue": "^1.1.0",
+    "ss2vue3": "github:snakeskintpl/ss2vue3",
     "string-dasherize": "^1.0.0",
     "style-loader": "^3.2.1",
     "stylus": "^0.54.8",
