--- a/package.json
+++ b/package.json
@@ -131,6 +131,6 @@
     "@v4fire/linters": "^1.7.3",
     "husky": "^7.0.4",
     "nyc": "^15.1.0",
-    "playwright": "^1.16.0"
+    "playwright": "1.15.2"
   }
 }
