--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "requestidlecallback": "^0.3.0",
     "snakeskin": "^7.5.1",
     "svg-transform-loader": "^2.0.13",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "tslib": "2.3.1",
     "vue": "2.6.10"
   },
@@ -59,6 +61,7 @@
     "@types/webpack": "^5.28.0",
     "@v4fire/design-system": "^1.23.0",
     "arg": "^5.0.0",
+    "chalk": "^4.1.2",
     "autoprefixer": "^10.3.1",
     "browserslist": "^4.15.0",
     "buble": "^0.20.0",
