--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "up": "npm i && npm up && npm audit fix"
   },
   "dependencies": {
-    "@v4fire/core": "^3.66.0",
+    "@v4fire/core": "github:v4fire/core#issues/244",
     "escaper": "^3.0.6",
     "eventemitter2": "^6.4.5",
     "jsdom": "^16.7.0",
@@ -63,7 +63,7 @@
     "browserslist": "^4.15.0",
     "buble": "^0.20.0",
     "camelize": "^1.0.0",
-    "collection.js": "^6.7.10",
+    "collection.js": "^6.7.11",
     "config": "^1.31.0",
     "copy-dir": "^1.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
